--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-	<title>First Page</title>
+	<title>Home Page</title>
     </head>
     <body>
-	<h1>Home Page</h1>
-	<p>Lets wait for changes<p>
+	<h1>First Page</h1>
+	<p>Jenkins!!!<p>
     </body>
 <html>
